# samsung-prism-hackathon

samsung_prism/: README.md  pyproject.toml
samsung_prism/src/samsung_prism/: crew.py  main.py
samsung_prism/src/samsung_prism/backend/: app.py
samsung_prism/src/samsung_prism/config/: agents.yaml  tasks.yaml
